--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="./src/DocuZen.png" />
+  <link rel="icon" type="image/svg+xml" href="./public/favicon1/favicon-32x32.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DocuZen</title>
 
